--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   	<h1 class="title-text"><span class="first">We're</span><span class="second"><br>coming<br>soon</span></h1>
 	  <p>Hello fellow shoppers! We're currently building our new fashion store. Add your email below to stay up-to-date with announcements and our launch deals.</p>  
 	<form name="form">
-  	<input type="text" name="email" class="inactive" id="inputField" placeholder="Email Address">
-  	<button id="submit" class="submit-button"><svg xmlns="http://www.w3.org/2000/svg" width="12" height="20"><path fill="none" stroke="#FFF" stroke-width="2" d="M1 1l8.836 8.836L1 18.671"/></svg></button>
+  	<input type="text" name="email" class="inactive" id="inputField" placeholder="Email Address" aria-label="Enter email address">
+  	<button id="submit" class="submit-button" aria-label="Submit email"><svg xmlns="http://www.w3.org/2000/svg" width="12" height="20"><path fill="none" stroke="#FFF" stroke-width="2" d="M1 1l8.836 8.836L1 18.671"/></svg></button>
   	</form>
   	<p class="error-text" id="err">Please provide a valid email</p>
   </div>
